# lexibook

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  cbindgen.toml  lath.wgl  pubspec.yaml  release.toml  test.wgl
.github/: dependabot.yml
.github/workflows/: rust.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/tech/twoaworld/lexibook/: MainActivity.kt
android/app/src/main/kotlin/tech/twoaworld/lexibook_flutter/: MainActivity.kt
cli/: CHANGELOG.md  Cargo.toml  release.toml
cli/src/: cli.rs  cli.yml  errors.rs  main.rs
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/sound_system/: distribution.rs  generator.rs  types.rs
core/src/sound_system/phone/: classes.rs  mod.rs  ordering.rs
core/src/sound_system/types/: common.rs  wasm.rs
core/src/wgl/: parser.rs
example/: package-lock.json  package.json
ffi/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  release.toml
ffi/src/: lib.rs
ffi/src/types/: lists.rs
ios/Classes/: SoundSystem.swift
ios/Flutter/: .last_build_id
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: file_picker.dart  main.dart
lib/bindings/: bindings.dart  lexibook.dart  types.dart
lib/extensions/: string.dart
lib/file_picker/: file_picker.dart  file_picker_io.dart
lib/helpers/: display.dart
lib/screens/: frequency.dart  home.dart  settings.dart  widget_input.dart
lib/widgets/: frequency.dart  icon_button.dart  menu.dart
macos/Classes/: SoundSystem.swift
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  LICENSE  Makefile.toml  lath.wgl  release.toml  words.txt
rust/cli/: Cargo.toml  build.rs  release.toml
rust/cli/src/: cli.rs  errors.rs  main.rs  output.rs
rust/core/: CHANGELOG.md  Cargo.toml  README.md
rust/core/src/: lib.rs  wgl.pest
rust/core/src/glossary/: mod.rs
rust/core/src/sound_system/: compiler.rs  distribution.rs  generator.rs  mod.rs  rules.rs  types.rs
rust/core/src/sound_system/phone/: classes.rs  mod.rs  types.rs
rust/core/src/wgl/: parser.rs
rust/ffi/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rust/ffi/src/: errors.rs  io.rs  lib.rs  sound_system.rs
rust/ffi/src/types/: lists.rs  mod.rs
rust/scripts/: grcov.sh
rust/test/: main.c
src/: cli.yml  lib.rs  main.rs  wgl.pest
src/cli/: CHANGELOG.md  Cargo.toml  README.md
src/cli/src/: cli.yml  main.rs
src/core/: CHANGELOG.md  Cargo.toml  README.md  release.toml
src/core/benches/: words_gen.rs
src/core/src/: lib.rs  wgl.pest
src/core/src/sound_system/: compiler.rs  distribution.rs  mod.rs  phone.rs  rules.rs
src/core/src/sound_system/phone/: classes.rs  mod.rs  ordering.rs  types.rs
src/core/src/sound_system/types/: common.rs  mod.rs
src/core/src/wgl/: parser.rs
src/ffi/: CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml  mod.rs
src/ffi/src/: lib.rs
src/ffi/src/types/: mod.rs
src/sound_system/: compiler.rs  distribution.rs  mod.rs  phone.rs
src/sound_system/shared/: mod.rs
src/sounds/: ipa.rs  mod.rs  sound_system.rs
src/storage/: mod.rs
src/wasm/: CHANGELOG.md  Cargo.toml  README.md  mod.rs
src/wasm/public/: index.html  index.js  lexibook.js  webpack.config.js
src/wasm/src/: lib.rs
src/wgl/: ast.rs  errors.rs  mod.rs  parser.rs  types.rs
test/: Makefile  main.c  widget_test.dart
wasm/: CHANGELOG.md  Cargo.toml  README.md
wasm/public/: index.html  index.js  package-lock.json  package.json
wasm/src/: lib.rs
windows/: CMakeLists.txt
windows/runner/: window_configuration.cpp
winuwp/runner_uwp/: CMakeLists.txt
