[package]
name = "lexibook"
version = "0.2.0"
authors = ["Pedro Mangabeira <pedro@2aworld.tech>"]
edition = "2018"
publish = false

[dependencies]
log = "0.4.8"
pest = "2.1.2"
pest_derive = "2.1.0"
rand = "0.7"
regex = "1"
# docx = "0.1.2"
# markdown = "0.2.0"
# lopdf = "0.23.0"
# radix_trie = "0.1"

# [dependencies.zip]
# version = "0.5"
# default-features = false
# features = ["deflate"]
