[package]
name = "lexibook"
version = "0.2.1"
authors = ["Pedro Mangabeira <pedro@2aworld.tech>"]
edition = "2018"
publish = false
[features]
default = []
wasm = ["rand/wasm-bindgen", "wasm-bindgen"]
[dependencies]
log = "0.4.8"
pest = "2.1.2"
pest_derive = "2.1.0"
rand = "0.7"
regex = "1"
cfg-if = "0.1.10"
wasm-bindgen = {version = "0.2", optional = true}
# docx = "0.1.2"
# markdown = "0.2.0"
# lopdf = "0.23.0"
# radix_trie = "0.1"

# [dependencies.zip]
# version = "0.5"
# default-features = false
# features = ["deflate"]
