[package]
name = "lexibook-cli"
version = "0.3.1"
authors = ["Pedro Mangabeira <pedro@2aworld.tech>"]
edition = "2018"
publish = false
license = "MIT"
repository = "https://gitlab.com/lexibook/lexibook"

[dependencies]
lexibook = {path="../core"}
log = "0.4.8"
prettytable-rs = "^0.8"
clap = {version = "2.33", features = ["yaml"]}
pest = "2.1.2"
csv = "1.1.2"
fern = {version = "0.5", features = ["colored"] }
