[package]
name = "lexibook"
version = "0.3.1-alpha.0"
authors = ["Pedro Mangabeira <pedro@2aworld.tech>"]
edition = "2018"
publish = false
license = "MIT"
repository = "https://gitlab.com/lexibook/lexibook"

[lib]
crate-type = ["rlib"]

[features]
wasm = ["rand/wasm-bindgen", "wasm-bindgen"]

[dependencies]
log = "0.4.8"
pest = "2.1.2"
pest_derive = "2.1.0"
rand = "0.7"
regex = "1"
serde = "1"
serde_derive = "1"
cfg-if = "0.1.10"
lazy_static = "1.4.0"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"], optional = true}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "words_gen"
harness = false
# docx = "0.1.2"
# markdown = "0.2.0"
# lopdf = "0.23.0"
# radix_trie = "0.1"

# [dependencies.zip]
# version = "0.5"
# default-features = false
# features = ["deflate"]


