[package]
name = 'lexibook-cli'
version = '0.3.3-alpha.0'
authors = ['Pedro Mangabeira <pedro@2aworld.tech>']
edition = '2018'
publish = false
license = 'MIT'
repository = 'https://gitlab.com/lexibook/lexibook'

[dependencies]
log = '0.4.11'
prettytable-rs = '^0.8'
pest = '2.1.2'
csv = '1.1.2'
structopt = '0.3.18'
clap-verbosity-flag = '0.3.1'

[dependencies.lexibook]
path = '../core'

[dependencies.fern]
version = '0.6'
features = ['colored']

[build-dependencies]
structopt = '0.3.18'
clap-verbosity-flag = '0.3.1'
log = '0.4.11'

[build-dependencies.lexibook]
path = '../core'
