[[bench]]
name = 'words_gen'
harness = false

[package]
name = 'lexibook'
version = "0.3.3-alpha.0"
authors = ['Pedro Mangabeira <pedro@2aworld.tech>']
edition = '2018'
publish = false
license = 'MIT'
repository = 'https://gitlab.com/lexibook/lexibook'

[lib]
crate-type = ['rlib']

[dependencies]
log = '0.4'
pest = '2.1'
pest_derive = '2.1'
rand = '0.7'
regex = '1'
serde = '1'
serde_derive = '1'
lazy_static = '1.4'

[dev-dependencies]
criterion = '0.3'
