[package]
name = 'lexibook-ffi'
version = '0.3.3-alpha.0'
authors = ['Pedro Mangabeira <pedro@2aworld.tech>']
edition = '2018'
publish = false
license = 'MIT'
repository = 'https://gitlab.com/lexibook/lexibook'
build = 'build.rs'

[lib]
crate-type = [
    'cdylib',
    'staticlib',
]

[dependencies]
log = '0.4.14'
lazy_static = '1.4.0'
simple_logger = '2.3.0'
pest = '2.1.2'

[dependencies.lexibook]
path = '../core'

[target.'cfg(target_os = "android")'.dependencies.jni]
version = '0.19'
default-features = false

[build-dependencies]
cbindgen = '0.20.0'
