[package]
name = "lexibook-ffi"
version = "0.2.7-alpha.0"
authors = ["Pedro Mangabeira <pedro@2aworld.tech>"]
edition = "2018"
publish = false
license = "MIT"
repository = "https://gitlab.com/lexibook/lexibook"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]


[dependencies]
lexibook = {path="../core"}
log = "0.4.8"
lazy_static = "1.4.0"
simple_logger = "1.4.0"
pest = "2.1.2"

[build-dependencies]
cbindgen = "0.12.0"
